修改青光眼数据处理代码

--- a/青光眼数据处理.ipynb
+++ b/青光眼数据处理.ipynb
@@ -137,7 +137,7 @@
     "                    cv2.imwrite(\"D:\\\\out\\\\\"+dn[a[0][0]][4]+\".jpg\",img)\n",
     "                    L=True\n",
     "                else:\n",
-    "                    outdata.append([dn[a[0][0]][0],dn[a[0][0]][1],dn[a[0][0]][2],dn[a[0][0]][3],dn[a[0][0]][3]+str(index).rjust(10,\"0\")])\n",
+    "                    outdata.append([dn[a[0][0]][0],dn[a[0][0]][1],dn[a[0][0]][2],dn[a[0][0]][3],dn[a[0][0]][3]+\"_\"+str(index).rjust(10,\"0\")])\n",
     "                    index+=1\n",
     "                    img=cv2.imdecode(np.fromfile(\"D:\\\\data\"+\"\\\\\"+i+\"\\\\\"+f,dtype=np.uint8),cv2.IMREAD_COLOR)\n",
     "                    cv2.imwrite(\"D:\\\\out\\\\\"+outdata[-1][4]+\".jpg\",img)\n",
@@ -150,7 +150,7 @@
     "                    cv2.imwrite(\"D:\\\\out\\\\\"+dn[a[0][0]][4]+\".jpg\",img)\n",
     "                    R=True\n",
     "                else:\n",
-    "                    outdata.append([dn[a[0][0]][0],dn[a[0][0]][1],dn[a[0][0]][2],dn[a[0][0]][3],dn[a[0][0]][3]+str(index).rjust(10,\"0\")])\n",
+    "                    outdata.append([dn[a[0][0]][0],dn[a[0][0]][1],dn[a[0][0]][2],dn[a[0][0]][3],dn[a[0][0]][3]+\"_\"+str(index).rjust(10,\"0\")])\n",
     "                    index+=1\n",
     "                    img=cv2.imdecode(np.fromfile(\"D:\\\\data\"+\"\\\\\"+i+\"\\\\\"+f,dtype=np.uint8),cv2.IMREAD_COLOR)\n",
     "                    cv2.imwrite(\"D:\\\\out\\\\\"+outdata[-1][4]+\".jpg\",img)\n",
